--- a/templates/authentication/home_page.html
+++ b/templates/authentication/home_page.html
@@ -56,22 +56,22 @@
 
             <div class="sidebar">
                 <a href="#home-section" id="Welcome To BigBank!" class="active">
-                    <span class="material-icons-sharp">home</span>
+                    <span class="material-icons-sharp sharp">home</span>
                     <h3 id="menu-heading">Home</h3>
                 </a>
 
                 <a href="#" id="Services">
-                    <span class="material-icons-sharp">shopping_cart</span>
+                    <span class="material-icons-sharp sharp">shopping_cart</span>
                     <h3 id="menu-heading">Services</h3>
                 </a>
 
                 <a href="#" id="contact">
-                    <span class="material-icons-sharp">contact_support</span>
+                    <span class="material-icons-sharp sharp">contact_support</span>
                     <h3 id="menu-heading">contact</h3>
                 </a>
 
                 <a href="#" id="About">
-                    <span class="material-icons-sharp">info</span>
+                    <span class="material-icons-sharp sharp">info</span>
                     <h3 id="menu-heading">About</h3>
                 </a>
 
@@ -173,7 +173,7 @@
         <div class="right">
             <div class="top">
                 <button id="menu-btn">
-                    <span class="material-icons-sharp">menu</span>
+                    <span class="material-icons-sharp menu">menu</span>
                 </button>
 
                 <div class="theme">
