--- a/templates/authentication/dash.html
+++ b/templates/authentication/dash.html
@@ -42,38 +42,38 @@
 
             <div class="sidebar">
                 <a href="#dash-section" id="Dashboard" class="active">
-                    <span class="material-icons-sharp">grid_view</span>
+                    <span class="material-icons-sharp sharp">grid_view</span>
                     <h3 id="menu-heading">Dashboard</h3>
                 </a>
 
                 <a href="#cust-section" id="Customers">
-                    <span class="material-icons-sharp">person</span>
+                    <span class="material-icons-sharp sharp">person</span>
                     <h3 id="menu-heading">Customers</h3>
                 </a>
 
-                <a href="#depo-section" id="Deposit">
+                <a href="#depo-section" id="Deposit sharp">
                     <span class="material-icons-sharp">paid</span>
                     <h3 id="menu-heading">Deposit</h3>
                 </a>
 
                 <a href="#with-section" id="Withdraw">
-                    <span class="material-icons-sharp">attach_money</span>
+                    <span class="material-icons-sharp sharp">attach_money</span>
                     <h3 id="menu-heading">Withdraw</h3>
                 </a>
 
                 <a href="#sett-section" id="Settings">
-                    <span class="material-icons-sharp">settings</span>
+                    <span class="material-icons-sharp sharp">settings</span>
                     <h3 id="menu-heading">Settings</h3>
                 </a>
 
                 <a href="#mess-section" id="Messages">
-                    <span class="material-icons-sharp">mail_outline</span>
+                    <span class="material-icons-sharp sharp">mail_outline</span>
                     <h3 id="menu-heading">Messages</h3>
                     <span class="message-count">26</span>
                 </a>
 
                 <a href="#">
-                    <span class="material-icons-sharp">logout</span>
+                    <span class="material-icons-sharp sharp">logout</span>
                     <h3>Logout</h3>
                 </a>
             </div>
@@ -152,7 +152,7 @@
         <div class="right">
             <div class="top">
                 <button id="menu-btn">
-                    <span class="material-icons-sharp">menu</span>
+                    <span class="material-icons-sharp menu">menu</span>
                 </button>
 
                 <div class="theme">
