--- a/templates/authentication/dash.html
+++ b/templates/authentication/dash.html
@@ -41,41 +41,45 @@
             </div>
 
             <div class="sidebar">
-                <a href="#dash-section" id="Dashboard" class="active">
+                <a href="#dash-section" id="Dashboard" class="active menu-link">
                     <span class="material-icons-sharp sharp">grid_view</span>
                     <h3 id="menu-heading">Dashboard</h3>
                 </a>
 
-                <a href="#cust-section" id="Customers">
+                <a href="#cust-section" id="Customers" class="menu-link">
                     <span class="material-icons-sharp sharp">person</span>
                     <h3 id="menu-heading">Customers</h3>
                 </a>
 
-                <a href="#depo-section" id="Deposit sharp">
+                <a href="#depo-section" id="Deposit sharp" class="menu-link">
                     <span class="material-icons-sharp">paid</span>
                     <h3 id="menu-heading">Deposit</h3>
                 </a>
 
-                <a href="#with-section" id="Withdraw">
+                <a href="#with-section" id="Withdraw" class="menu-link">
                     <span class="material-icons-sharp sharp">attach_money</span>
                     <h3 id="menu-heading">Withdraw</h3>
                 </a>
 
-                <a href="#sett-section" id="Settings">
+                <a href="#sett-section" id="Settings" class="menu-link">
                     <span class="material-icons-sharp sharp">settings</span>
                     <h3 id="menu-heading">Settings</h3>
                 </a>
 
-                <a href="#mess-section" id="Messages">
+                <a href="#mess-section" id="Messages" class="menu-link">
                     <span class="material-icons-sharp sharp">mail_outline</span>
                     <h3 id="menu-heading">Messages</h3>
                     <span class="message-count">26</span>
                 </a>
 
-                <a href="#">
+                <a href="/logout" id="logout-btn" class="menu-link">
                     <span class="material-icons-sharp sharp">logout</span>
-                    <h3>Logout</h3>
+                    <h3 id="menu-heading">Logout</h3>
                 </a>
+   
+                <!-- <button type="submit"><a href="/logout" id="logout-btn" class="logout-link"><span class="material-icons-sharp sharp">logout</span>Logout</a>
+                <button> -->
+                
             </div>
         </aside>
 
