--- a/templates/authentication/home_page.html
+++ b/templates/authentication/home_page.html
@@ -55,22 +55,22 @@
             </div>
 
             <div class="sidebar">
-                <a href="#home-section" id="Welcome To BigBank!" class="active">
+                <a href="#home-section" id="Welcome To BigBank!" class="active menu-link">
                     <span class="material-icons-sharp sharp">home</span>
                     <h3 id="menu-heading">Home</h3>
                 </a>
 
-                <a href="#" id="Services">
+                <a href="#" id="Services" class="menu-link">
                     <span class="material-icons-sharp sharp">shopping_cart</span>
                     <h3 id="menu-heading">Services</h3>
                 </a>
 
-                <a href="#" id="contact">
+                <a href="#" id="contact" class="menu-link">
                     <span class="material-icons-sharp sharp">contact_support</span>
                     <h3 id="menu-heading">contact</h3>
                 </a>
 
-                <a href="#" id="About">
+                <a href="#" id="About" class="menu-link">
                     <span class="material-icons-sharp sharp">info</span>
                     <h3 id="menu-heading">About</h3>
                 </a>
