--- a/login/static/dash.css
+++ b/login/static/dash.css
@@ -262,7 +262,7 @@ aside .sidebar{
 aside h3{
     font-weight: 500;
 }
-aside .sidebar a{
+aside .sidebar .menu-link{
     display: flex;
     color: var(--color-info-dark);
     margin-left: 2rem;
@@ -273,24 +273,33 @@ aside .sidebar a{
     transition: all 300ms ease;
     /* border-radius: 1rem; */
 }
-aside .sidebar a span{
-    font-size: 1.6rem;
+aside .sidebar .menu-link span{
+    font-size: 1.4rem;
     transition: all 300ms ease
 }
-aside .sidebar a:last-child{
-    position: absolute;
-    bottom: 5rem;
-    width: 100%;
-}
 
-aside .sidebar a.active{
+/* aside .sidebar #logout-btn{
+    position: absolute;
+    bottom: 4rem;
+    width: 70%;
+    color: #fff;
+    border: #fff solid 1px;
+    border-radius: var(--border-radius-3);
+    background: var(--color-danger);
+    padding: 1px;
+    align-items: center;
+    justify-content: space-between;
+
+} */
+
+aside .sidebar .menu-link.active{
     background: var(--color-danger);
     color: var(--color-white);
     margin-left: 0;
     border-radius: 1rem;
 }
 
-aside .sidebar a.active::before{
+aside .sidebar .menu-link.active::before{
     content: "";
     width: 6px;
     height: 100%;
@@ -298,24 +307,24 @@ aside .sidebar a.active::before{
     border-radius: 1rem;
 }
 
-aside .sidebar a.active span{
+aside .sidebar .menu-link.active span{
     color: var(--color-white);
     margin-left: calc(1rem - 3px);
 }
 
-aside .sidebar a:hover{
+aside .sidebar .menu-link:hover{
     color: var(--color-danger);
 }
 
-aside .sidebar a:hover span{
+aside .sidebar .menu-link:hover span{
     margin-left: 1rem;
 }
 
 aside .sidebar .message-count{
     background: var(--color-danger);
     color: #fff;
-    padding: 2px 10px;
-    font-size: 11px;
+    padding: 2px 8px;
+    font-size: 8px;
     border-radius: var(--border-radius-1);
 }
 
@@ -554,14 +563,14 @@ main .date input[type="date"]{
         display: none;
     }
 
-    aside .sidebar a{
+    aside .sidebar .menu-link{
         width: 5.6rem;
     }
 
-    aside .sidebar a:last-child{
+    /* aside .sidebar #logout-btn{
         position: relative;
         margin-top: 5.6rem;
-    }
+    } */
     main{
         width: 60vw;
         height: 96vh;
@@ -632,15 +641,15 @@ main .date input[type="date"]{
         display: inline;
     }
 
-    aside .sidebar a{
+    aside .sidebar .menu-link{
         height: 3.4rem;
         width: 100%;
     }
 
-    aside .sidebar a:last-child{
+    /* aside .sidebar #logout-btn{
         position: relative;
         bottom: 5.6rem;
-    }
+    } */
 
     aside .close{
         display: inline-block;
