--- a/templates/authentication/dash.html
+++ b/templates/authentication/dash.html
@@ -111,7 +111,7 @@
                     </p>
                 </section>
 
-                <section class="inner-body" id="depo-section"
+                <section class="inner-body" id="depo-section">
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam maxime, dolor enim voluptatibus eveniet quod quo rem quibusdam similique, dolorem soluta, dolorum corporis velit praesentium veniam nobis nostrum fugit possimus.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde hic iure ea? Voluptates harum tempora corporis illo iure velit, ipsum numquam sit dicta, vitae a, unde ipsa minima sunt reiciendis.
