--- a/templates/authentication/newHomePage.html
+++ b/templates/authentication/newHomePage.html
@@ -56,8 +56,8 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h2>Welcome to <span>BIG</span>BANK</h2>
-        <h2>The Home of <span>Money</span></h2>
+        <h1>Welcome to <span>BIG</span>BANK</h1>
+        <h2>The Home <span>of Money</span></h2>
         <a href="#" class="btn" id="home-btn">Login</a>
         <a href="#" class="btn" id="home-btn">SignUp</a>
     </div>
