--- a/templates/authentication/newHomePage.html
+++ b/templates/authentication/newHomePage.html
@@ -18,17 +18,35 @@
 
 </head>
 <body>
+
+    
     
 <!-- header section starts  -->
 
 <header class="header">
 
+
+
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        <strong>Message:</strong> {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+
+
+
+
+
+
     <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> BIGBANK</a>
 
     <nav class="navbar">
-        <a href="#home">home</a>
+        <a href="#home">Home</a>
         <a href="#members">Members</a>
-        <a href="#review">review</a>
+        <a href="#review">Review</a>
         <a href="#footer">Contact</a>
     </nav>
 
@@ -38,13 +56,14 @@
     </div>
 
 
-    <form action="" class="login-form">
-        <h3>login now</h3>
-        <input type="email" placeholder="your email" class="box">
-        <input type="password" placeholder="your password" class="box">
-        <p>forget your password <a href="#">click here</a></p>
-        <p>don't have an account <a href="#">create now</a></p>
+    <form action="/login" method="POST" class="login-form">
+        {% csrf_token %}
+        <h3>Login Now</h3>
+        <input type="text" name="username" class="box" id="username" placeholder="ericknabstar125" Required>
+        <input type="password" name="pass1" class="box" id="pass1" placeholder="password" Required>
         <input type="submit" value="login now" class="btn">
+        <p>forgot your password? <a href="">click here</a></p>
+        <p>Don't have an account? <a href="{% url 'signup_page' %}">create now</a></p>
     </form>
 
 </header>
@@ -58,8 +77,8 @@
     <div class="content">
         <h1>Welcome to <span>BIG</span>BANK</h1>
         <h2>The Home <span>of Money</span></h2>
-        <a href="#" class="btn" id="home-btn">Login</a>
-        <a href="#" class="btn" id="home-btn">SignUp</a>
+        <a class="btn" id="btn-login">Login</a>
+        <a href="{% url 'signup_page' %}" class="btn" id="home-btn">SignUp</a>
     </div>
 
 </section>
@@ -106,7 +125,7 @@
 
 <section class="review" id="review">
 
-    <h1 class="heading"> member's <span>review</span> </h1>
+    <h1 class="heading"> member's <span>Review</span> </h1>
 
     <div class="swiper review-slider">
 
@@ -192,7 +211,7 @@
         </div>
 
         <div class="box">
-            <h3>contact info</h3>
+            <h3>Contact Info</h3>
             <a href="#" class="links"> <i class="fas fa-phone"></i> +256-700-0000 </a>
             <a href="#" class="links"> <i class="fas fa-phone"></i> +256-700-0000 </a>
             <a href="#" class="links"> <i class="fas fa-envelope"></i> bigbank4322@gmail.com </a>
@@ -200,10 +219,10 @@
         </div>
 
         <div class="box">
-            <h3>quick links</h3>
-            <a href="#home" class="links"> <i class="fas fa-arrow-right"></i> home </a>
-            <a href="#members" class="links"> <i class="fas fa-arrow-right"></i> members </a>
-            <a href="#review" class="links"> <i class="fas fa-arrow-right"></i> review </a>
+            <h3>Quick Links</h3>
+            <a href="#home" class="links"> <i class="fas fa-arrow-right"></i> Home </a>
+            <a href="#members" class="links"> <i class="fas fa-arrow-right"></i> Members </a>
+            <a href="#review" class="links"> <i class="fas fa-arrow-right"></i> Review </a>
         </div>
 
         <div class="box">
