--- a/templates/authentication/signup_page.html
+++ b/templates/authentication/signup_page.html
@@ -18,27 +18,13 @@
 
 </head>
 <body>
-    
+     
+    <div class="display-message">
+        
+    </div>
 <!-- header section starts  -->
 
 <header class="header">
-
-
-
-    {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-        <strong>Message:</strong> {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endfor %}
-
-
-
-
-
-
     <a href="{% url 'home' %}" class="logo"> <i class="fas fa-shopping-basket"></i> BIGBANK</a>
 
     <nav class="navbar">
